--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -458,7 +458,7 @@
                                 <td class="content-cell">
                                     <div class="f-fallback">
                                         <h1>Hi <span th:text="${name}"></span>,</h1>
-                                        <p>You recently requested to reset your password for your <span th:text="${prod}"> account. Use the button below to reset it. <strong>This password reset is only valid for the next 24 hours.</strong></p>
+                                        <p>You recently requested to reset your password for your <span th:text="${prod}"></span> account. Use the button below to reset it. <strong>This password reset is only valid for the next 30 minutes.</strong></p>
                                         <!-- Action -->
                                         <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
                                             <tr>
@@ -475,7 +475,7 @@
                                                 </td>
                                             </tr>
                                         </table>
-                                        <p>For security, this request was received from a <span th:text="${operating}"></span> device using <span th:text="${browser}"></span>. If you did not request a password reset, please ignore this email or <a href="{{support_url}}">contact support</a> if you have questions.</p>
+                                        <p>For security, this request was received from a <span th:text="${operating}"></span> device using browser <span th:text="${browser}"></span>. If you did not request a password reset, please ignore this email or <a href="{{support_url}}">contact support</a> if you have questions.</p>
                                         <p>Thanks,
                                             <br>The <span th:text="${prod}"> team</p>
                                         <!-- Sub copy -->
@@ -499,9 +499,9 @@
                             <tr>
                                 <td class="content-cell" align="center">
                                     <p class="f-fallback sub align-center">
-                                        [Company Name, LLC]
-                                        <br>1234 Street Rd.
-                                        <br>Suite 1234
+                                        FPT Aptech
+                                        <br>No 8 Ton That Thuyet, My Dinh, Nam Tu Liem, Ha Noi,Viet Nam
+                                        <br>Zipcode: 100000
                                     </p>
                                 </td>
                             </tr>
