🤡 update mail form reset password

--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -477,7 +477,7 @@
                                         </table>
                                         <p>For security, this request was received from a <span th:text="${operating}"></span> device using browser <span th:text="${browser}"></span>. If you did not request a password reset, please ignore this email or <a href="{{support_url}}">contact support</a> if you have questions.</p>
                                         <p>Thanks,
-                                            <br>The <span th:text="${prod}"> team</p>
+                                            <br>The <span th:text="${prod}"> team</span></p>
                                         <!-- Sub copy -->
                                         <table class="body-sub" role="presentation">
                                             <tr>
